--- a/github.html
+++ b/github.html
@@ -5,8 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> Hello</h1>
+    <h2>Ki koro</h2>
+    <h3> valo aso?</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et esse inventore sed pariatur, unde molestias quidem. Beatae dolor aut voluptatem.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem quam cumque veniam! Sit, laudantium magnam.</p>
 </body>
 </html>
